# MySocket

./: .editorconfig  .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  account.cpp  account.h  connection-new.cpp  connection-new.h  connection.cpp  connection.h  context.h  logger.cpp  logger.h  main.cpp  mysocket.cpp  mysocket.h  mysqlpool.cpp  mysqlpool.h  myssl.cpp  myssl.h  service.cpp  service.h  thread.cpp  thread.h  util.h
openssl/include/openssl/: configuration.h
openssl/lib64/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
